CGE-68: Refactoring GlobalExceptionHandlerTest